# bsxplorer2

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.md  README.md  justfile  pyproject.toml  rust-analyzer.json  rustfmt.toml
.github/workflows/: coverage.yml
.helix/: languages.toml
benches/: beta_binom.rs
bsx_rs/: Cargo.toml
bsx_rs/src/: bsx_batch.rs  bsx_reader.rs  bsx_writer.rs  genome.rs  lib.rs  region.rs  ubatch.rs  ubatch2.rs
bsx_rs/src/io/: mod.rs
bsx_rs/src/io/bsx/: bsx_reader.rs  ipc.rs  mod.rs  read.rs  region_data.rs  region_read.rs  region_reader.rs  write.rs
bsx_rs/src/io/new/: bsx_batch.rs  data_batch.rs  data_schema.rs  mod.rs  reader.rs  report_batch.rs  report_schema.rs
bsx_rs/src/io/report/: bsx_batch.rs  fasta_reader.rs  mod.rs  read.rs  readv2.rs  readv3.rs  schema.rs  types.rs  write.rs
bsx_rs/src/io/report/readv2/: batch_inner.rs  batch_res.rs  mod.rs
bsx_rs/src/utils/: mod.rs  types.rs
bsx_rs/tests/: io_tests.rs  reading.rs
bsxplorer2/: Cargo.toml  __init__.py  pyproject.toml
bsxplorer2/python/bsxplorer2/: __init__.py
bsxplorer2/rust/: bsx_reader.rs  lib.rs  reader.rs  region.rs  utils.rs  writer.rs
bsxplorer2/rust/python/: mod.rs
bsxplorer2/src/: exports.rs  lib.rs  prelude.rs  utils.rs
bsxplorer2/src/data_structs/: annotation.rs  context_data.rs  coords.rs  enums.rs  methstats.rs  mod.rs  region.rs  region_data.rs  tests.rs  typedef.rs
bsxplorer2/src/data_structs/annotation/: annot_store.rs  gff_entry.rs  mod.rs  tests.rs
bsxplorer2/src/data_structs/batch/: base.rs  batch.rs  builder.rs  decoded.rs  encoded.rs  encoded2.rs  lazy.rs  mod.rs  schema.rs  tests.rs  traits.rs  utils.rs
bsxplorer2/src/data_structs/coords/: contig.rs  gpos.rs  interval_map.rs  mod.rs  tests.rs
bsxplorer2/src/io/: compression.rs  fasta.rs  mod.rs
bsxplorer2/src/io/bsx/: index.rs  ipc.rs  ipc_parallel.rs  mod.rs  multi.rs  multiple_reader.rs  read.rs  region.rs  region_read.rs  report_index.rs  write.rs
bsxplorer2/src/io/report/: mod.rs  read.rs  read2.rs  schema.rs  write.rs
bsxplorer2/src/tools/: mod.rs  stat_gather.rs
bsxplorer2/src/tools/dimred/: dbscan.rs  dist.rs  merge.rs  mle.rs  mod.rs  mom.rs  segmentation.rs
bsxplorer2/src/tools/dmr/: config.rs  data_structs.rs  iterator.rs  mod.rs  reader.rs  segmentation.rs  tv1d_clone.rs  types.rs
bsxplorer2/src/tools/stats/: mod.rs
bsxplorer2/src/utils/: mod.rs  stats.rs  types.rs
bsxplorer2/tests/: bsx_reading.rs  bsx_writing.rs  common.rs  region_reader.rs  report_reading.rs  report_writing.rs
bsxplorer2/tests/data/: A_thaliana.bsx  annot.gff  genes.bed  report.bsx
console/: Cargo.toml  README.md
console/src/: convert.rs  dimred.rs  dmr.rs  dmr2.rs  dmr_binom.rs  dmr_fast.rs  dmr_metilene.rs  lib.rs  main.rs  sort.rs  stats.rs  strings.rs  utils.rs  validate.rs
console/src/convert/: frombsx.rs  mod.rs  r2r.rs  tobsx.rs
console/src/dimred/: merge.rs  mod.rs  shrink.rs
console/src/dmr/: args.rs  mod.rs  reader.rs  segmentation.rs  tv1d_clone.rs  types.rs
console/src/strings/: convert_ahelp.txt  convert_help.txt  dimred_help.txt  dmr_ahelp.txt  dmr_binom_ahelp.txt  dmr_fast_ahelp.txt  dmr_help.txt  sort_help.txt  stats_ahelp.txt  validate_help.txt
python/: Cargo.toml  README.md  pyproject.toml
python/bsx2/: __init__.py  bsx2.pyi  data_struct.py  data_struct.pyi  io.py  io.pyi  types.py  types.pyi  utils.py
python/bsx2/plots/: data.py
python/bsx2/stubs/: io.pyi  types.pyi
python/bsx2/typings/: io.pyi  types.pyi
python/bsxplorer2/: __init__.py  bsxplorer2.pyi  misc.py  misc.pyi
python/bsxplorer2/io/: bsx.py  bsx.pyi  report.py  report.pyi
python/src/: lib.rs  utils.rs
python/src/data_structs/: encoded.rs  mod.rs
python/src/io/: bsx.rs  compression.rs  mod.rs  region.rs  report.rs
python/src/types/: annot.rs  batch.rs  context_data.rs  coords.rs  decoded.rs  encoded.rs  index.rs  lazy.rs  mod.rs  report_schema.rs  stats.rs  utils.rs
python/tests/: test_accessible.py
python/tests/plots/: discrete.py
python/tests/types/: __init__.py  annot.py  coords.py  decoded.py  encoded.py  index.py  lazy.py  report_schema.py
python/tests/types_mod/: __init__.py  batch.py  coords.py
rust/: Cargo.toml  bsx_batch.rs  bsx_batch_group.rs  exports.rs  lib.rs  region.rs
rust/data_structs/: bsx_batch.rs  bsx_batch_group.rs  mod.rs  region.rs  region_data.rs
rust/io/bsx/: dmr.rs  ipc_lazy.rs  mod.rs  multiple_reader.rs  read.rs  region_data.rs  region_read.rs  region_read2.rs  write.rs
rust/io/report/: fasta_reader.rs  mod.rs  read.rs  schema.rs  write.rs
rust/plots/: lineplot.rs  mod.rs
rust/tests/: io_tests.rs
rust/tools/: dmr.rs  dmr2.rs  meth_stats.rs  mod.rs
rust/tools/dmr/: beta_binom.rs  config.rs  data_structs.rs  dmr_binom.rs  dmr_fast.rs  iterator.rs  meth_region.rs  mod.rs  penalty_segment.rs  segmentation.rs  sure_segment.rs  tv1d_clone.rs  utils.rs
rust/tools/metilene/: dmr_model.rs  ks2d.rs  mod.rs
rust/utils/: mod.rs  types.rs
src/: bsx_reader.rs  bsx_writer.rs  bsxipc.rs  exports.rs  genome.rs  ipc_reader.rs  lib.rs  main.rs  report.rs  schema.rs  sequence.rs
src/BSXplorer2/: _batches.py  _dataclasses.py  _genomewide.py  _readers.py  _report.py  _utils.py
src/data_structs/: bsx_batch.rs  bsx_batch_group.rs  bsx_builder.rs  context_data.rs  genome.rs  mod.rs  region.rs  region_data.rs
src/data_structs/batch/: batch_trait.rs  bsx_dtype.rs  builder.rs  decoded.rs  encoded.rs  group.rs  lazy.rs  mod.rs  traits.rs  utils.rs
src/genome/: index.rs  mod.rs  offset.rs
src/io/: compression.rs  mod.rs
src/io/bsx/: ipc.rs  ipc_lazy.rs  mod.rs  multiple_reader.rs  read.rs  region_read.rs  region_read2.rs  write.rs
src/io/report/: fasta_reader.rs  mod.rs  read.rs  (+4 more)
src/plots/: lineplot.rs  mod.rs
src/python/: mod.rs
src/report/: mod.rs
src/sequence/: mod.rs
src/tools/: meth_stats.rs  mod.rs
src/utils/: ipc_reader.rs  mod.rs  types.rs
tests/: beta_binom_mle_comp.rs  io_tests.rs
web/: Cargo.toml  Trunk.toml  index.html
web/src/: convert.rs  main.rs
web/src/static/: styles.css
(+10 files in other folders)
