[package]
name = "bsxplorer2"
version = "0.1.1-post1"
edition = "2021"
authors = ["shitohana (kyudytskiy@gmail.com)"]
license-file = "LICENSE.md"
description = "A high-performance library for bisulfite sequencing data analysis and DNA methylation research"
repository = "https://github.com/shitohana/bsxplorer2"
keywords = ["bioinformatics", "methylation", "bisulfite", "epigenetics", "genomics"]
categories = ["science", "data-structures", "algorithms", "mathematics"]
readme = "README.md"

[features]
compression = ["zstd", "lz4", "flate2", "xz2", "bzip2", "zip"]

#[workspace]
#members = ["console"]

[lib]
path = "src/lib.rs"

[dev-dependencies]
rand_chacha = "=0.3.1"

[dependencies]
# Utility
anyhow = "1.0.91"
assert_approx_eq = "1.1.0"
once_cell = "1.21.3"
crossbeam = "0.8.4"
hashbrown = { version = "=0.14.5", features = ["raw"] }
itertools = "0.14.0"
num = "0.4.3"
rayon = "1.10"
tempfile = "3.15.0"
uuid = { version = "1.12.1", features = ["serde"] }
cached = "0.55.1"
memmap = "0.7.0"

# Logging
log = "0.4.22"
pretty_env_logger = "0.5.0"

# Serde
bincode = "1.3.3"
serde = "1.0.217"
serde_json = "1"

# Stats
console = "0.15"

adjustp = "0.1.6"
rand = { version = "=0.8.5", features = ["std", "std_rng"] }
rand_distr = "=0.4.3"
argmin = "0.10.0"
ndarray = { version = "0.16.1", features = ["serde"] }
statrs = "0.18.0"

# Bio
bio = "2.0.3"
bio-types = "1.0.4"
noodles = { version = "0.90.0", features = ["fasta"] }

# Compression
zstd = { version = "0.13.3", optional = true}
lz4 = {version = "1.28.1", optional = true}
xz2 = {version = "0.1.7", optional = true}
bzip2 = { version = "0.5.2", optional = true}
zip = { version = "2.6.1", optional = true}
flate2 = { version = "1.1.1", optional = true}

[dependencies.polars]
version = "=0.45.0"
default-features = false
features = [
    # Performance
    # "performant",
    # Data types
    "dtype-i16",
    "dtype-u8",
    "dtype-i8",
    "dtype-u16",
    "dtype-categorical",
    "dtype-struct",
    # Lazy
    "lazy",
    # IO
    "csv",
    "decompress",
    "ipc",
    "streaming",
    # DataFrame operations
    "dataframe_arithmetic",
    "partition_by",
    "asof_join",
    "polars-ops",
    # Expressions
    "strings",
    "is_in",
    "round_series",
    "concat_str",
    "rank",
]

[dependencies.polars-arrow-format]
version = "0.1.0"
