[workspace]
members = ["bsxplorer2", "console", "python"]
resolver = "2"
default-members = ["bsxplorer2"]

[workspace.package]
authors = ["shitohana (kyudytskiy@gmail.com)"]
description = "A high-performance library for bisulfite sequencing data analysis and DNA methylation research"
license-file = "LICENSE.md"
repository = "https://github.com/shitohana/bsxplorer2"
keywords = ["bioinformatics", "methylation", "bisulfite", "epigenetics", "genomics"]
categories = ["science", "data-structures", "algorithms", "mathematics"]
version = "0.2.1"
edition = "2021"
readme = "README.md"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = false
opt-level = 0
codegen-units = 16
lto = false

[profile.pydev]
inherits = "dev"
debug = false
opt-level = 1
panic = "unwind"
strip = "none"
lto = "thin"
debug-assertions = false
codegen-units = 128

[workspace.dependencies]
adjustp = "0.1.6"
anyhow = "1.0.91"
bio = "2.0.3"
itertools = "0.14.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
rayon = "1.10"
serde = "1.0.217"
serde_json = "1"
statrs = "0.18.0"
once_cell = "1.21.3"
crossbeam = "0.8.4"
hashbrown = { version = "0.15.3", features = ["serde"] }
paste = "1.0.15"
slotmap = "1.0.7"

[workspace.dependencies.polars]
version = "=0.45.0"
default-features = false
features = [
    # Data types
    "dtype-i16",
    "dtype-u16",
    "dtype-categorical",
    "dtype-struct",
    "strings",
    "cum_agg",
    "log",
    # Lazy
    "lazy",
    # IO
    "csv",
    "ipc",
    # DataFrame operations
    "partition_by",
    # Expressions
    "is_in",
    "round_series",
    "fmt"
]

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[workspace.metadata.release]
allow-branch = ["main"]
shared-version = true
