[package]
name = "bsxplorer2"
exclude = ["tests"]
authors.workspace = true
description.workspace = true
license-file.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true

[features]
compression = ["zstd", "lz4", "flate2", "xz2", "bzip2", "zip", "tempfile"]
performant = ["polars/performant", "polars/cse"]
performant_nightly = ["polars/nightly"]
console = ["clap"]
tools = []

[lib]
path = "src/lib.rs"

[dev-dependencies]
rstest = "0.25.0"
assert_approx_eq = "1.1.0"
rand_distr = "=0.4.3"
rand = { version = "=0.8.5", features = ["std", "std_rng"] }
tempfile = "3.15.0"

[dependencies]
crossbeam = "0.8.4"
num = "0.4.3"
tempfile = { version = "3.15.0", optional = true }
indexmap = "2.9.0"
multimap = "0.10.0"
arcstr = "1.2.0"
csv = "1.3.1"
nanoid = "0.4.0"
bincode = { version = "=2.0.0-rc.3", features = ["serde"] } # We're using *-rc, because release version needs rust 1.85
bincode_derive = { version = "=2.0.0-rc.3" }
smallstr = { version = "0.3.0", features = ["serde"] }
noodles = { version = "0.90.0", features = ["fasta"] }
zstd = { version = "0.13.3", optional = true }
lz4 = { version = "1.28.1", optional = true }
xz2 = { version = "0.1.7", optional = true }
bzip2 = { version = "0.5.2", optional = true }
zip = { version = "2.6.1", optional = true }
flate2 = { version = "1.1.1", optional = true }
clap = { version = "4.1", features = ["derive"], optional = true }
polars-arrow = "0.45.0"
either = "1.15.0"

paste.workspace = true
anyhow.workspace = true
bio.workspace = true
itertools.workspace = true
log.workspace = true
once_cell.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
statrs.workspace = true
polars.workspace = true
hashbrown.workspace = true


[lints]
workspace = true
