[project]
name = "bsxplorer2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.12.0",
    "pyarrow>=18.0.0",
]

[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
# Pure Python packages/modules
find = { where = ["src"] }

[[tool.setuptools-rust.ext-modules]]
# Private Rust extension module to be nested into the Python package
target = "bsxplorer2._lib"  # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
# but you can add a prefix to nest it inside a Python package.
path = "Cargo.toml"
binding = "PyO3"
