[package]
name = "bsxplorer-ci"
license = "MIT"
readme = "README.md"
description = "A high-performance tool for bisulfite sequencing data analysis and DNA methylation research"
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true

[features]
nightly = ["bsxplorer2/performant_nightly"]

[dependencies]
clap = { version = "4.1", features = ["derive"] }
console = "0.15"
csv = { version = "1.3.1" }
dialoguer = "0.11.0"
glob = "0.3"
indicatif = "0.17.11"
wild = "2.0"

crossbeam.workspace = true
adjustp.workspace = true
anyhow.workspace = true
rayon.workspace = true
serde.workspace = true
polars.workspace = true
once_cell.workspace  = true
itertools.workspace = true
bio.workspace = true
log.workspace = true
spipe = "0.1.0"
hashbrown.workspace = true
uuid = { version = "1.17.0", features = ["v4"] }
arcstr = "1.2.0"
num = "0.4.3"


[dependencies.bsxplorer2]
version = "0.2.2"
default-features = false
features = ["performant", "compression", "tools"]

[[bin]]
name = "bsxplorer"
path = "src/main.rs"
