[package]
name = "bsx2"
authors.workspace = true
description.workspace = true
license-file.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true

[lib]
crate-type = ["cdylib"]
name = "bsx2"

[dependencies]
bsxplorer2 = { path = "../bsxplorer2", features = ["compression", "performant"] }
pyo3 = { version = "=0.22.4", features = ["extension-module", "anyhow", "either"] }
# We need to use the same version of polars as in the Rust code
pyo3-polars = "=0.19.0"
pyo3-file = "0.9.0"
