[package]
name = "bsx2_native"
authors.workspace = true
description.workspace = true
license-file.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true

[lib]
crate-type = ["cdylib"]
name = "_native"

[dependencies]
bsxplorer2 = { path = "../bsxplorer2", features = ["compression", "performant"] }
pyo3 = { version = "=0.22.4", features = ["extension-module", "anyhow", "either"] }
# We need to use the same version of polars as in the Rust code
pyo3-polars = "=0.19.0"
pyo3-file = "0.9.0"
paste = "1.0.15"
once_cell.workspace = true

[package.metadata.cargo-udeps.ignore]
normal = ["bincode", "bincode_derive"]
