[tool.poetry]
name = "bsx2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
polars = "^1.29.0"
pyarrow = "^20.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.maturin]
python-source = "."
module-name = "bsx2._native"

[build-system]
requires = ["poetry-core", "maturin>=1,<2"]
build-backend = "maturin"
