[tool.poetry]
name = "bsx2"
version = "0.1.0"
description = "A high-performance library for bisulfite sequencing data analysis and DNA methylation research"
authors = ["shitohana <kyudytskiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
polars = "^1.0.0"
pyarrow = "*"
numpy = ">=2.0"
scipy = "*"
matplotlib = ">=3.8,<4.0"
plotly = ">=5.0,<6.0"
pydantic = "~=2.0"
holoviews = "^1.20.2"
notebook = "^7.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
tqdm = "^4.67.1"

[tool.maturin]
python-source = "."
module-name = "bsx2._native"
features = ["nightly"]

[build-system]
requires = ["poetry-core", "maturin>=1,<2"]
build-backend = "maturin"
