[package]
name = "bsxplorer-lib"
version = "0.1.0"
edition = "2021"
authors = ["shitohana"]

[lib]
name="_lib"
path = "lib.rs"

[features]
python = ["pyo3", "pyo3-polars"]
plots = ["plotly", "z_table", "histogram", "yew", "yew-plotly"]

[dev-dependencies]
rand = { version = "=0.8.5", features = ["std", "std_rng"] }
rand_distr = "=0.4.3"
rand_chacha = "=0.3.1"
assert_approx_eq = "1.1.0"

[dependencies]
hashbrown = { version = "=0.14.5", features = ["raw"] }
bio = "2.0.3"
itertools = "0.14.0"
rayon = "1.10"
memmap2 = "0.9.5"
noodles = { version = "0.90.0", features = ["fasta"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
num = "0.4.3"
tempfile = "3.15.0"
bio-types = "1.0.4"
serde = "1.0.217"
statrs = "0.18.0"
bincode = "1.3.3"
serde_json = "1"
anyhow = "1.0.91"
ndarray = "0.16.1"
uuid = { version="1.12.1" , features = ["serde"]}
argmin = { version = "0.10.0", features = ["rayon"] }
argmin-math = { version = "0.4.0", features = ["vec"]}
adjustp = "0.1.6"
once_cell = "1.20.3"

# DMR
crossbeam = "0.8.4"

# Plots dependencies
z_table = { version = "0.1.5", optional = true }
plotly = { version = "0.12.1", optional = true}
histogram = { version = "0.11.2", optional = true}
yew = { version = "0.21", features = ["csr"], optional = true }
yew-plotly = { version = "0.3.0", optional = true }

[dependencies.pyo3-polars]
version = "=0.19.0"
features = [
    "dtype-array",
    "dtype-categorical",
    "dtype-full",
    "dtype-struct",
    "derive"
]
optional = true

[dependencies.pyo3]
version = "*"
features = [
    "extension-module"
]
optional = true


[dependencies.polars]
version = "=0.45.0"
default-features = false
features = [
    # Performance
    "performant",
    # Data types
    "dtype-i16",
    "dtype-u8",
    "dtype-i8",
    "dtype-u16",
    "dtype-categorical",
    "dtype-struct",
    "dtype-array",
    # Lazy
    "lazy",
    # IO
    "csv",
    "decompress",
    "ipc",
    "ipc_streaming",
    "streaming",
    # DataFrame operations
    "dataframe_arithmetic",
    "partition_by",
    "asof_join",
    "polars-ops",
    # Expressions
    "strings",
    "is_in",
    "round_series",
    "concat_str",
    "rank",
    "list_eval",
    "list_count",
    "list_any_all",
    "search_sorted",
]

[dependencies.polars-arrow-format]
version = "0.1.0"